@@ -1,3 +1,10 @@
+2007-05-25  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-theme-info.c: (read_icon_theme):
+	* gnome-theme-info.h:
+	add a "readable_name" property for icon themes, and make sure "name"
+	points to the internal theme name
+
 2007-05-25  Denis Washington  <denisw@svn.gnome.org>
 
 	* theme-thumbnail.c:
